some tweaks to the navbar

--- a/homepage.html
+++ b/homepage.html
@@ -39,10 +39,10 @@
         </div>
         <div class="secondary-links-container">
           <a href="#">
-            <ion-icon class="mr-3" name="add"></ion-icon> Create Playlist
+            <ion-icon id="create-playlist" class="mr-3" name="add"></ion-icon> Create Playlist
           </a>
           <a href="#">
-            <ion-icon class="mr-3" name="heart"></ion-icon> Liked songs
+            <ion-icon id="liked-songs" class="mr-3" name="heart"></ion-icon> Liked songs
           </a>
         </div>
         <div class="playlist-links-container">
@@ -63,7 +63,7 @@
           <a href="#">Your Top Songs 2018</a>
           <a href="#">Jazz Classics Blue Note Edition</a>
 
-          <a class="install-app" href="#">
+          <a class="install-app mt-5" href="#">
             <ion-icon name="arrow-down-circle-outline"></ion-icon> Install App
           </a>
         </div>
