--- a/homepage.html
+++ b/homepage.html
@@ -1,30 +1,206 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <h1>Asadbek's section</h1>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.css">
+  <title>Hello, world!</title>
+</head>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+<body>
+  
+  <div class="container-fluid">
+    <h4 class=""><strong>Recently played</strong></h4>
+    <p class="see-all">SEE ALL</p>
+    <div class="row mx-n1 mb-4">
+      <div class="col px-1 w-100 img-fluid">
+        <div class="card ">
+          <img class="images" src="images/img1.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Burning Jazz-rock</h5>
+            <p class="card-text"> You'll find fiery <br> modern, groovy, jazz-...</p>
+          </div>
+        </div>
+      </div>
+      <div class="col px-1 w-100 img-fluid">
+        <div class="card">
+           <img class="images" src="images/img2.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Metal Ballads</h5>
+            <p class="card-text">A collection of the best <br> metal ballads.
+              </p>
+          </div>
+        </div>
+      </div>
+      <div class="col px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/img3.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Midian</h5>
+            <p class="card-text">Cradle Of Filth
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/liked songs.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="body">
+            <h5> Liked Songs</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/img5.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>LE BASK</h5>
+            <p class="card-text text-secondary">Artist
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/img6.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>POST HUMAN: S...</h5>
+            <p class="card-text text-secondary">Bring Me The Horizon
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/img6.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>POST HUMAN: S...</h5>
+            <p class="card-text text-secondary">Bring Me The Horizon
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/img6.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>POST HUMAN: S...</h5>
+            <p class="card-text text-secondary">Bring Me The Horizon
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+  <div class="container-fluid">
+    <h4 class=""><strong>Shows  <span>to try </span></strong></h4>
+    <p>Podcasts we think you'll get hooked on</p>
+    <p class="SEE-ALL">SEE ALL</p>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+    <div class="row mx-n1 mb-4">
+      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+        <div class="card ">
+           <img class="images" src="images/img9.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Catd title</h5>
+            <p class="card-text">Some quick example text to build on the
+              content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/img10.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Catd title</h5>
+            <p class="card-text">Some quick example text to build on the
+              content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/img11.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Catd title</h5>
+            <p class="card-text">Some quick example text to build on the
+              content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/img12.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Catd title</h5>
+            <p class="card-text">Some quick example text to build on the
+              content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/img13.png"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Catd title</h5>
+            <p class="card-text">Some quick example text to build on the
+              content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+        <div class="card h-100">
+           <img class="images" src="images/IMG14.jpg"
+            class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Catd title</h5>
+            <p class="card-text">Some quick example text to build on the
+              content.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
