--- a/homepage.html
+++ b/homepage.html
@@ -25,16 +25,13 @@
         </div>
         <div class="main-links-container">
           <a href="#">
-            <ion-icon class="icon-outline mr-3" name="home-outline"></ion-icon>
             <ion-icon class="icon-fill mr-3" name="home"></ion-icon> Home
           </a>
           <a href="#">
-            <ion-icon class="icon-outline mr-3" name="search-outline"></ion-icon>
-            <ion-icon class="icon-fill mr-3" name="search"></ion-icon> Search
+            <ion-icon class="icon-outline mr-3" name="search-outline"></ion-icon> Search
           </a>
           <a href="#">
-            <ion-icon class="icon-outline mr-3" name="library-outline"></ion-icon>
-            <ion-icon class="icon-fill mr-3" name="library"></ion-icon> Library
+            <ion-icon class="icon-outline mr-3" name="library-outline"></ion-icon> Library
           </a>
         </div>
         <div class="secondary-links-container">
