--- a/homepage.html
+++ b/homepage.html
@@ -19,7 +19,7 @@
     <title>Home</title>
   </head>
   <body>
-    <div class="container mt-5">
+    <div class="container mt-2">
       <div class="d-flex justify-content-between">
         <div class="buttonsforAll">
           <button class="arrowButton bg-dark"><</button>
@@ -35,7 +35,7 @@
             aria-expanded="false"
           >
             <i class="bi bi-person-circle"></i>
-            Diego Banovaz
+            Diego 'Ziba' Banovaz
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#">Action</a>
@@ -44,16 +44,31 @@
           </div>
         </div>
       </div>
-      <h1 class="mt-5">Good Morning</h1>
+      <h1 class="my-3 h3">Good Morning</h1>
     </div>
-    <div id="second" class="container d-flex">
-      <div class="row d-sm-table-row">
-        <div class="firstCard d-inline-block">
+
+    <div class="container d-flex">
+      <div class="row d-flex">
+        <div class="firstCard">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>This is title</span>
+          <span>Burning Jazz-rock Fusion</span>
+        </div>
+        <div class="firstCard">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
+            alt=""
+          />
+          <span>Liked Songs</span>
+        </div>
+        <div class="firstCard">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
+            alt=""
+          />
+          <span>Can you hear me</span>
         </div>
         <div class="firstCard">
           <img
@@ -69,20 +84,8 @@
           />
           <span>This is title</span>
         </div>
-        <div class="firstCard">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span>This is title</span>
-        </div>
-        <div class="firstCard">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span>This is title</span>
-        </div>
+      </div>
+      <div class="row d-flex">
         <div class="firstCard">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
@@ -117,7 +120,7 @@
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>This is title</span>
+          <span>Liked Songs</span>
         </div>
       </div>
     </div>
