--- a/homepage.html
+++ b/homepage.html
@@ -27,19 +27,44 @@
         </div>
         <div class="dropdown">
           <button
-            class="btn bg-dark text-light dropdown-toggle rounded-pill"
+            class="
+              btn
+              loginpage
+              bg-dark
+              text-light
+              dropdown-toggle
+              rounded-pill
+            "
             type="button"
             id="dropdownMenuButton"
             data-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
           >
-            <i class="bi bi-person-circle"></i>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              fill="currentColor"
+              class="bi bi-person-circle"
+              viewBox="0 0 16 16"
+            >
+              <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+              <path
+                fill-rule="evenodd"
+                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
+              />
+            </svg>
             Diego 'Ziba' Banovaz
           </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <div
+            class="dropdown-menu bg-dark text-primary"
+            aria-labelledby="dropdownMenuButton"
+          >
             <a class="dropdown-item" href="#">Action</a>
+            <hr />
             <a class="dropdown-item" href="#">Profile</a>
+            <hr />
             <a class="dropdown-item" href="#">Log Out</a>
           </div>
         </div>
@@ -47,9 +72,9 @@
       <h1 class="my-3 h3">Good Morning</h1>
     </div>
 
-    <div class="container d-flex">
+    <div class="container">
       <div class="row d-flex">
-        <div class="firstCard">
+        <div class="firstCard rounded">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
@@ -68,21 +93,21 @@
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>Can you hear me</span>
+          <span>Metal Ballads</span>
         </div>
         <div class="firstCard">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>This is title</span>
+          <span>POST HUMAN: SURVIVAL</span>
         </div>
         <div class="firstCard">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>This is title</span>
+          <span>This Is Joe Bonamassa</span>
         </div>
       </div>
       <div class="row d-flex">
@@ -91,14 +116,14 @@
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>This is title</span>
+          <span>Midian</span>
         </div>
         <div class="firstCard">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>This is title</span>
+          <span>Nymphetamine</span>
         </div>
 
         <div class="firstCard">
@@ -106,21 +131,21 @@
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>This is title</span>
+          <span>amo</span>
         </div>
         <div class="firstCard">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>This is title</span>
+          <span>LE BASK</span>
         </div>
         <div class="firstCard">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>Liked Songs</span>
+          <span>Opeth</span>
         </div>
       </div>
     </div>
