added some features

--- a/homepage.html
+++ b/homepage.html
@@ -9,72 +9,68 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Hello, world!</title>
 </head>
 
 <body>
-  
   <div class="container-fluid">
-    <h4 class=""><strong>Recently played</strong></h4>
-    <p class="see-all">SEE ALL</p>
+    <h4 class=" py-3"><strong>Recently played</strong></h4>
+    <a href="#" class="see-all py-3">SEE ALL</a>
     <div class="row mx-n1 mb-4">
-      <div class="col px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card ">
-          <img class="images" src="images/img1.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/img1.jpg" class="w-100 img-fluid rounded" alt="">
+          <i class="bi bi-play-circle"></i>
           <div class="card-body">
             <h5>Burning Jazz-rock</h5>
-            <p class="card-text"> You'll find fiery <br> modern, groovy, jazz-...</p>
+            <p class="card-text text-secondary pt-2"> You'll find fiery <br> modern, groovy, jazz-...</p>
           </div>
         </div>
       </div>
-      <div class="col px-1 w-100 img-fluid">
-        <div class="card">
-           <img class="images" src="images/img2.jpg"
-            class="w-100 img-fluid rounded" alt="">
+      <div class="col  px-1 w-100 img-fluid">
+        <div class="card h-100">
+          <img class="images" src="images/img2.jpg" class="w-100 img-fluid rounded" alt="">
+          <i class="bi bi-play-circle"></i>
           <div class="card-body">
             <h5>Metal Ballads</h5>
-            <p class="card-text">A collection of the best <br> metal ballads.
-              </p>
-          </div>
-        </div>
-      </div>
-      <div class="col px-1 w-100 img-fluid">
-        <div class="card h-100">
-           <img class="images" src="images/img3.jpg"
-            class="w-100 img-fluid rounded" alt="">
-          <div class="card-body">
-            <h5>Midian</h5>
-            <p class="card-text">Cradle Of Filth
+            <p class="card-text text-secondary pt-4">A collection of the best <br> metal ballads.
             </p>
           </div>
         </div>
       </div>
-      <div class="col px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
-           <img class="images" src="images/liked songs.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/img3.jpg" class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5 class="pt-1">Midian</h5>
+            <p class="card-text text-secondary pt-4">Cradle Of Filth
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col  px-1 w-100 img-fluid">
+        <div class="card h-100">
+          <img class="images" src="images/liked songs.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="body">
-            <h5> Liked Songs</h5>
+            <h5 class="pt-4 pl-2"> Liked Songs</h5>
           </div>
         </div>
       </div>
-      <div class="col px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
-           <img class="images" src="images/img5.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img id = "round-img"class="images" src="images/img5.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
-            <h5>LE BASK</h5>
-            <p class="card-text text-secondary">Artist
+            <h5 class="pt-1">LE BASK</h5>
+            <p class="card-text text-secondary pt-4">Artist
             </p>
           </div>
         </div>
       </div>
-      <div class="col px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
-           <img class="images" src="images/img6.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/img6.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
             <h5>POST HUMAN: S...</h5>
             <p class="card-text text-secondary">Bring Me The Horizon
@@ -82,24 +78,22 @@
           </div>
         </div>
       </div>
-      <div class="col px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
-           <img class="images" src="images/img6.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/img7.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
-            <h5>POST HUMAN: S...</h5>
-            <p class="card-text text-secondary">Bring Me The Horizon
+            <h5>This is Joe Bonam</h5>
+            <p class="card-text text-secondary">This is Joe Bonamassa..<br>
             </p>
           </div>
         </div>
       </div>
-      <div class="col px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
-           <img class="images" src="images/img6.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/img8.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
-            <h5>POST HUMAN: S...</h5>
-            <p class="card-text text-secondary">Bring Me The Horizon
+            <h5>Nymphetamine</h5>
+            <p class="card-text text-secondary pt-4">Cradle Of Filth
             </p>
           </div>
         </div>
@@ -108,82 +102,140 @@
   </div>
 
   <div class="container-fluid">
-    <h4 class=""><strong>Shows  <span>to try </span></strong></h4>
+    <h4 class=""><strong>Shows <span>to try </span></strong></h4>
     <p>Podcasts we think you'll get hooked on</p>
-    <p class="SEE-ALL">SEE ALL</p>
+    <a href="#" class="see-all2">SEE ALL</a>
 
     <div class="row mx-n1 mb-4">
-      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card ">
-           <img class="images" src="images/img9.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/img9.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
-            <h5>Catd title</h5>
-            <p class="card-text">Some quick example text to build on the
-              content.</p>
+            <h5 class="pb-2">II Podcast di Aless..</h5>
+            <p class="card-text text-secondary">Alessandro Barbero
+             </p>
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
-           <img class="images" src="images/img10.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/img10.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
-            <h5>Catd title</h5>
-            <p class="card-text">Some quick example text to build on the
-              content.</p>
+            <h5>Demoni Urbani</h5>
+            <p class="card-text text-secondary pt-1">Gli Ascoltabili
+             </p>
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
-           <img class="images" src="images/img11.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/img11.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
-            <h5>Catd title</h5>
-            <p class="card-text">Some quick example text to build on the
-              content.</p>
+            <h5>Daily Cogito</h5>
+            <p class="card-text text-secondary pt-4">Rick DuFer
+             </p>
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
-           <img class="images" src="images/img12.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/img12.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
-            <h5>Catd title</h5>
-            <p class="card-text">Some quick example text to build on the
-              content.</p>
+            <h5>Locanda del Drag..</h5>
+            <p class="card-text text-secondary pt-1"> Andrea Lucca</p>
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
-           <img class="images" src="images/img13.png"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/img13.png" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
-            <h5>Catd title</h5>
-            <p class="card-text">Some quick example text to build on the
-              content.</p>
+            <h5>Mindfulness in Voce</h5>
+            <p class="card-text text-secondary pt-1">Mindfulness Bergamo</p>
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-2 px-1 w-100 img-fluid">
+      <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
-           <img class="images" src="images/IMG14.jpg"
-            class="w-100 img-fluid rounded" alt="">
+          <img class="images" src="images/IMG14.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
-            <h5>Catd title</h5>
-            <p class="card-text">Some quick example text to build on the
-              content.</p>
+            <h5>Que Due Sul Server</h5>
+            <p class="card-text text-secondary pt-1">Que Due Sul Server</p>
+          </div>
+        </div>
+      </div>
+      <div class="col   px-1 w-100 img-fluid">
+        <div class="card h-100">
+          <img class="images" src="images/img15.jpg" class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Power Pizza</h5>
+            <p class="card-text text-secondary pt-4">Nick Loro Sio </p>
+          </div>
+        </div>
+      </div>
+      <div class="col  px-1 w-100 img-fluid">
+        <div class="card h-100">
+          <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
+          <div class="card-body">
+            <h5>Mitologia</h5>
+            <p class="card-text text-secondary pt-4">Spotify Studios</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-
-
+<!-- 
+<div class="container-fluid d-flex flex-wrap">
+  <div class="card" style="width: 12rem; ">
+    <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
+    <div class="card-body ">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 12rem;">
+    <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 12rem;">
+    <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 12rem;">
+    <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 12rem;">
+    <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 12rem;">
+    <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 12rem;">
+    <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 12rem;">
+    <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+</div> -->
 
   <!-- Optional JavaScript; choose one of the two! -->
 
