last updated artist and album  html page

--- a/album.html
+++ b/album.html
@@ -66,21 +66,21 @@
       </div>
     </div>
     </div>
+    <div class="col-10">
 
 
-    <!-- JUMBOTRON AND TABLE START HERE -->
-
-
-
-
-
-
-
-
-    <!-- JUMBOTRON AND TABLE ENDS HERE  -->
-
-
-
+        <!-- JUMBOTRON AND TABLE START HERE -->
+  
+  
+  
+  
+  
+  
+  
+  
+      <!-- JUMBOTRON AND TABLE ENDS HERE  -->
+      </div>
+      
  <!-- FOOTER STARTS HERE  -->
            <section>
             <footer>
