--- a/artist.html
+++ b/artist.html
@@ -65,7 +65,7 @@
         </div>
       </div>
     </div>
-    </div>
+    <div class="col-10">
 
 
       <!-- JUMBOTRON AND TABLE START HERE -->
@@ -78,6 +78,7 @@
 
 
     <!-- JUMBOTRON AND TABLE ENDS HERE  -->
+    </div>
     
            <!-- FOOTER STARTS HERE  -->
            <section>
