--- a/album.html
+++ b/album.html
@@ -101,7 +101,7 @@
               </tr>
               <tr>
                 <th scope="col-1">3</th>
-                 <td scope="col-8">Doing all right__revisited <h6 class="smallh6">Smile</h6></td>
+                 <td scope="col-8">Doing all right__revisited <h6 class="smallh6">Queen</h6></td>
                  <td scope="col-3">3:16</td>
                 <td ></td>
                 
