buttons completed for both artist and album pages

--- a/artist.html
+++ b/artist.html
@@ -100,12 +100,7 @@
       </div>
       <div class="col-9 ml-n5 mt-2">
         <div class="secondary-button-group d-flex">
-          <div class="like-album-heart mr-5">
-            <ion-icon name="heart-outline"></ion-icon>
-          </div>
-          <div class="download-album">
-            <ion-icon class="mr-5" name="arrow-down-circle-outline"></ion-icon>
-          </div>
+          <button class="follow-btn mr-5">FOLLOW</button>
           <div class="three-dots">
             <img src="./mp_assets/three-dots.svg" alt="">
           </div>
