final tweaks to navbar on album and artist pages

--- a/album.html
+++ b/album.html
@@ -24,7 +24,7 @@
           <img id="main-logo" class="img-fluid mt-4 mb-4" src="./mp_assets/Spotify_Logo_RGB_White.png" alt="">
         </div>
         <div class="main-links-container">
-          <a href="#">
+          <a class="navbar-active-link" href="#">
             <ion-icon class="icon-fill mr-3" name="home"></ion-icon> Home
           </a>
           <a href="#">
