added lines around OR

--- a/login.html
+++ b/login.html
@@ -28,10 +28,10 @@
             <ion-icon name="logo-apple"></ion-icon>
             CONTINUE WITH APPLE
         </button>
-        <div class="d-flex or-divider mt-4 mb-4">
-            <span class="horizontal-line d-inline-block w-45"></span>
-            <span>OR</span>
-            <span class="horizontal-line d-inline-block w-45"></span>
+        <div class="or-divider w-100 mt-4 mb-4">
+            <div class="horizontal-line"></div>
+            <div>OR</div>
+            <div class="horizontal-line"></div>
         </div>
         <input class="d-block w-100" type="text" placeholder="Email address or username">
         <input class="d-block w-100" type="password" placeholder="Password">
