updated artist and album page
the album page is updated but the artist page still need some align adjustment

--- a/artist.html
+++ b/artist.html
@@ -189,7 +189,7 @@
 
         <br>
         <h4>popular releases</h4>
-      </div>
+      
       <div class="col-2 ">
         <h5>Artist Pick</h5>
         <div class=" artist-pick d-flex mt-3">
@@ -208,9 +208,13 @@
             <div class="d-flex ">
               <h6 class="queen">queen best of</h6>
             </div>
+            <div>
             <h6 class="playlist">Playlist</h6>
           </div>
         </div>
+      </div>
+      </div>
+      </div>
       </div>
 
 
