tried to change responsiveness

--- a/homepage.html
+++ b/homepage.html
@@ -129,7 +129,7 @@
           </div>
         </div>
       </div>
-      <div class="col  px-1 w-100 img-fluid">
+      <!-- <div class="col  px-1 w-100 img-fluid">
         <div class="card h-100">
           <img class="images" src="images/img7.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
@@ -148,7 +148,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -158,7 +158,7 @@
     <a href="#" class="see-all2">SEE ALL</a>
 
     <div class="row mx-n1 mb-4">
-      <div class="col  px-1 w-100 img-fluid">
+      <div class="col px-1 w-100 img-fluid">
         <div class="card ">
           <img class="images" src="images/img9.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
@@ -168,7 +168,7 @@
           </div>
         </div>
       </div>
-      <div class="col  px-1 w-100 img-fluid">
+      <div class="col px-1 w-100 img-fluid">
         <div class="card h-100">
           <img class="images" src="images/img10.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
@@ -178,7 +178,7 @@
           </div>
         </div>
       </div>
-      <div class="col  px-1 w-100 img-fluid">
+      <div class="col px-1 w-100 img-fluid">
         <div class="card h-100">
           <img class="images" src="images/img11.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
@@ -188,7 +188,7 @@
           </div>
         </div>
       </div>
-      <div class="col  px-1 w-100 img-fluid">
+      <div class="col px-1 w-100 img-fluid">
         <div class="card h-100">
           <img class="images" src="images/img12.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
@@ -197,7 +197,7 @@
           </div>
         </div>
       </div>
-      <div class="col  px-1 w-100 img-fluid">
+      <div class="col px-1 w-100 img-fluid">
         <div class="card h-100">
           <img class="images" src="images/img13.png" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
@@ -206,7 +206,7 @@
           </div>
         </div>
       </div>
-      <div class="col  px-1 w-100 img-fluid">
+      <div class="col px-1 w-100 img-fluid">
         <div class="card h-100">
           <img class="images" src="images/IMG14.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
@@ -215,7 +215,7 @@
           </div>
         </div>
       </div>
-      <div class="col   px-1 w-100 img-fluid">
+      <!-- <div class="col   px-1 w-100 img-fluid">
         <div class="card h-100">
           <img class="images" src="images/img15.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
@@ -232,7 +232,7 @@
             <p class="card-text text-secondary pt-4">Spotify Studios</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
