--- a/artist.html
+++ b/artist.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
   <title>Hello, world!</title>
 </head>
@@ -74,7 +75,7 @@
         <!-- JUMBOTRON AND TABLE START HERE -->
     
          <div class="position-relative">
-           <i class=" jumbo-icon bi bi-patch-check-fill"><span class="text-white">Verified Artist</span></i>
+           <i class=" jumbo-icon bi bi-patch-check-fill"><span class="span"> Verified Artist</span></i>
           <img class="w-100 jumbo-img img-fluid " src="./images/jumbotron1.jpg" alt="">
           <h1 class="jumbo-title">Queen</h1>
           <p class="jumbo-parag">37,120,733 listeners</p>
