update of cards

--- a/homepage.html
+++ b/homepage.html
@@ -58,67 +58,67 @@
             Diego 'Ziba' Banovaz
           </button>
           <div
-            class="dropdown-menu bg-dark text-primary"
+            class="dropdown-menu bg-dark"
             aria-labelledby="dropdownMenuButton"
           >
-            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item text-light" href="#">Action</a>
             <hr />
-            <a class="dropdown-item" href="#">Profile</a>
+            <a class="dropdown-item text-light" href="#">Profile</a>
             <hr />
-            <a class="dropdown-item" href="#">Log Out</a>
+            <a class="dropdown-item text-light" href="#">Log Out</a>
           </div>
         </div>
       </div>
-      <h1 class="my-3 h3">Good Morning</h1>
+      <!-- THE TITLE JON -->
+      <h3 class="font-weight-bolder my-3">Good Morning</h3>
     </div>
+    <!-- THIS IS WHERE CARDS BEGINS -->
 
-    <div class="container">
-      <div class="row d-flex">
-        <div class="firstCard rounded">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
+    <div class="container-fluid good-morning-container-fluid pt-5">
+      <div class="good-morning-main-container">
+        <div class="good-morning-card-container">
+          <img src="/mornin_imgs/img1.jpg" alt="" />
           <span>Burning Jazz-rock Fusion</span>
         </div>
-        <div class="firstCard">
+        <!-- EVERY CARD IS INSIDE THE SEPARATE COLS -->
+        <div class="good-morning-card-container img-fluid">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
           <span>Liked Songs</span>
         </div>
-        <div class="firstCard">
+
+        <div class="good-morning-card-container">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
           <span>Metal Ballads</span>
         </div>
-        <div class="firstCard">
+
+        <div class="good-morning-card-container">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
-          <span>POST HUMAN: SURVIVAL</span>
+          <span class="">POST HUMAN: SURVIVAL</span>
         </div>
-        <div class="firstCard">
+        <div class="good-morning-card-container">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
           <span>This Is Joe Bonamassa</span>
         </div>
-      </div>
-      <div class="row d-flex">
-        <div class="firstCard">
+        <div class="good-morning-card-container">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
           <span>Midian</span>
         </div>
-        <div class="firstCard">
+        <div class="good-morning-card-container">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
@@ -126,21 +126,22 @@
           <span>Nymphetamine</span>
         </div>
 
-        <div class="firstCard">
+        <div class="good-morning-card-container">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
           <span>amo</span>
         </div>
-        <div class="firstCard">
+        <!-- a -->
+        <div class="good-morning-card-container">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
           />
           <span>LE BASK</span>
         </div>
-        <div class="firstCard">
+        <div class="good-morning-card-container">
           <img
             src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
             alt=""
